Finalizada primeira seção de marcação

--- a/index.html
+++ b/index.html
@@ -8,10 +8,23 @@
 <body>
     <header>
         <h2>GC.</h2>
-        <img src="./imagens/netflix-logo.svg" alt="">
+        <img src="./imagens/netflix-logo.svg" alt="Logotipo Netflix">
     </header>
     <main>
-        <section></section>
+        <section class="hero">
+            <div class="esquerda">
+                <h3>THE EXPERIENCE</h3>
+                <h1>STRANGER THINGS</h1>
+            </div>
+            <div class="direita">
+                <p>Descubra os seus poderes e vire o herói de sua própria aventura</p>
+                <button>
+                    ESCOLHA SUA CIDADE
+                    <img src="./imagens/seta-botao.svg" alt="Seta">
+                </button>
+
+            </div>
+        </section>
     </main>
 </body>
 </html>
