--- a/index.html
+++ b/index.html
@@ -1,30 +1,106 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="PT-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Stranger-Things</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h2>GC.</h2>
-        <img src="./imagens/netflix-logo.svg" alt="Logotipo Netflix">
+      <h2>GC.</h2>
+      <img src="imagens/netflix-logo.svg" alt="Logotipo Netflix" />
     </header>
-    <main>
-        <section class="hero">
-            <div class="esquerda">
-                <h3>THE EXPERIENCE</h3>
-                <h1>STRANGER THINGS</h1>
-            </div>
-            <div class="direita">
-                <p>Descubra os seus poderes e vire o herói de sua própria aventura</p>
-                <button>
-                    ESCOLHA SUA CIDADE
-                    <img src="./imagens/seta-botao.svg" alt="Seta">
-                </button>
 
-            </div>
-        </section>
+    <main>
+
+      <section class="hero">
+        <div class="esquerda">
+          <h3>THE EXPERIENCE</h3>
+          <h1>STRANGER THINGS</h1>
+        </div>
+        <div class="direita">
+          <p>Descubra os seus poderes e vire o herói de sua própria aventura</p>
+          <button>
+            ESCOLHA SUA CIDADE
+            <img src="imagens/seta-botao.svg" alt="Seta" />
+          </button>
+        </div>
+      </section>
+
+      <section class="secaoCidade">
+        <div class="titulo">
+          <h2>ESCOLHA SUA CIDADE</h2>
+          <button>
+            ESCOLHA SUA CIDADE
+            <img src="./imagens/seta-botao.svg" alt="Seta" />
+          </button>
+        </div>
+        <div class="cards">
+          <div class="card">
+            <h3>Sidney</h3>
+            <p>INGRESSOS DISPONÍVEIS</p>
+          </div>
+          <div class="card">
+            <h3>Cidade do México</h3>
+            <p>INGRESSOS DISPONÍVEIS</p>
+          </div>
+          <div class="card">
+            <h3>Yas Island</h3>
+            <p>INGRESSOS DISPONÍVEIS</p>
+          </div>
+        </div>
+      </section>
+
+      <section class="secaoDepoimentos">
+        <div class="logotipos">
+          <img src="imagens/netflix-logo.svg" alt="Logotipo Netflix" />
+          <img src="imagens/clio-logo.svg" alt="Logotipo Netflix" />
+          <img src="imagens/fever-logo.svg" alt="Logotipo Netflix" />
+        </div>
+        <div class="depoimentos">
+          <div class="depoimento">
+            <img src="imagens/img-dep1.webp" alt="" />
+            <p>
+              "Guests are immersed into an original "Stranger Things"
+              storyline...[it] combines the special effects of a 3D Universal
+              Studios ride with a telekinetic escape room."
+            </p>
+          </div>
+          <div class="depoimento">
+            <img src="imagens/img-dep2.webp" alt="" />
+            <p>
+              "Guests are immersed into an original "Stranger Things"
+              storyline...[it] combines the special effects of a 3D Universal
+              Studios ride with a telekinetic escape room."
+            </p>
+          </div>
+          <div class="depoimento">
+            <img src="imagens/img-dep3.webp" alt="" />
+            <p>
+              "Guests are immersed into an original "Stranger Things"
+              storyline...[it] combines the special effects of a 3D Universal
+              Studios ride with a telekinetic escape room."
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section class="secaoObrigado">
+        <h2>OBRIGADO POR SE JUNTAR A NÓS NESTA AVENTURA EM:</h2>
+        <ul>
+           <li>Sidney</li>
+           <li>Rio de Janeiro</li>
+           <li>São Paulo</li>
+           <li>Los Angeles</li>
+           <li>Nova Iorque</li>
+           <li>São Francisco</li>
+           <li>Londres</li>
+           <li>Atlanta</li>
+           <li>Paris</li>
+           <li>Toronto</li>
+           <li>Seatle</li>
+        </ul>
+      </section>
     </main>
-</body>
+  </body>
 </html>
