Finalizado estrutura html da página

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     </header>
 
     <main>
-
       <section class="hero">
         <div class="esquerda">
           <h3>THE EXPERIENCE</h3>
@@ -88,19 +87,64 @@
       <section class="secaoObrigado">
         <h2>OBRIGADO POR SE JUNTAR A NÓS NESTA AVENTURA EM:</h2>
         <ul>
-           <li>Sidney</li>
-           <li>Rio de Janeiro</li>
-           <li>São Paulo</li>
-           <li>Los Angeles</li>
-           <li>Nova Iorque</li>
-           <li>São Francisco</li>
-           <li>Londres</li>
-           <li>Atlanta</li>
-           <li>Paris</li>
-           <li>Toronto</li>
-           <li>Seatle</li>
+          <li>Sidney</li>
+          <li>Rio de Janeiro</li>
+          <li>São Paulo</li>
+          <li>Los Angeles</li>
+          <li>Nova Iorque</li>
+          <li>São Francisco</li>
+          <li>Londres</li>
+          <li>Atlanta</li>
+          <li>Paris</li>
+          <li>Toronto</li>
+          <li>Seatle</li>
         </ul>
       </section>
     </main>
+
+    <footer>
+      <div class="conteudoFooter">
+        <div class="logoFooter">
+          <h3>THE EXPERIENCE</h3>
+          <h2>STRANGER THINGS</h2>
+        </div>
+
+        <div class="secoesFooter">
+          <div class="social">
+            <h3>REDES SOCIAIS</h3>
+            <ul>
+              <li><img src="imagens/footer-facebook.svg" alt="" /></li>
+              <li><img src="imagens/footer-instagram.svg" alt="" /></li>
+              <li><img src="imagens/footer-twitter.svg" alt="" /></li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="parceiro">
+          <h3>PARCEIRO DE MÍDIA</h3>
+          <img src="imagens/footer-parceiro.svg" alt="" />
+        </div>
+
+        <div class="institucional">
+          <nav>
+            <ul>
+              <li>contato</li>
+              <li>Imprensa</li>
+              <li>Parcerias</li>
+              <li>Influenciadores</li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+      <div class="logotiposFooter">
+        <img src="imagens/netflix-logo.svg" alt="" />
+        <img src="imagens/fever-logo.svg" alt="" />
+      </div>
+      <div class="textoInfinito">
+        <h3>THE EXPERIENCE</h3>
+        <h3>THE EXPERIENCE</h3>
+        <h3>THE EXPERIENCE</h3>
+      </div>
+    </footer>
   </body>
 </html>
