Finalizado a estilização da página

--- a/index.html
+++ b/index.html
@@ -31,63 +31,65 @@
         </div>
       </section>
 
-      <section class="secaoCidade">
-        <div class="titulo">
-          <h2>ESCOLHA SUA CIDADE</h2>
-          <button>
-            ESCOLHA SUA CIDADE
-            <img src="./imagens/seta-botao.svg" alt="Seta" />
-          </button>
-        </div>
-        <div class="cards">
-          <div class="card">
-            <h3>Sidney</h3>
-            <p>INGRESSOS DISPONÍVEIS</p>
+      <div class="bgMonstro">
+        <section class="secaoCidade">
+          <div class="titulo">
+            <h2>ESCOLHA SUA CIDADE</h2>
+            <button>
+              ESCOLHA SUA CIDADE
+              <img src="./imagens/seta-botao.svg" alt="Seta" />
+            </button>
           </div>
-          <div class="card">
-            <h3>Cidade do México</h3>
-            <p>INGRESSOS DISPONÍVEIS</p>
+          <div class="cards">
+            <div class="card">
+              <h3>Sidney</h3>
+              <p>INGRESSOS DISPONÍVEIS</p>
+            </div>
+            <div class="card">
+              <h3>Cidade do México</h3>
+              <p>INGRESSOS DISPONÍVEIS</p>
+            </div>
+            <div class="card">
+              <h3>Yas Island</h3>
+              <p>INGRESSOS DISPONÍVEIS</p>
+            </div>
           </div>
-          <div class="card">
-            <h3>Yas Island</h3>
-            <p>INGRESSOS DISPONÍVEIS</p>
-          </div>
-        </div>
-      </section>
+        </section>
 
-      <section class="secaoDepoimentos">
-        <div class="logotipos">
-          <img src="imagens/netflix-logo.svg" alt="Logotipo Netflix" />
-          <img src="imagens/clio-logo.svg" alt="Logotipo Netflix" />
-          <img src="imagens/fever-logo.svg" alt="Logotipo Netflix" />
-        </div>
-        <div class="depoimentos">
-          <div class="depoimento">
-            <img src="imagens/img-dep1.webp" alt="" />
-            <p>
-              "Guests are immersed into an original "Stranger Things"
-              storyline...[it] combines the special effects of a 3D Universal
-              Studios ride with a telekinetic escape room."
-            </p>
+        <section class="secaoDepoimentos">
+          <div class="logotipos">
+            <img src="imagens/netflix-logo.svg" alt="Logotipo Netflix" />
+            <img src="imagens/clio-logo.svg" alt="Logotipo Netflix" />
+            <img src="imagens/fever-logo.svg" alt="Logotipo Netflix" />
           </div>
-          <div class="depoimento">
-            <img src="imagens/img-dep2.webp" alt="" />
-            <p>
-              "Guests are immersed into an original "Stranger Things"
-              storyline...[it] combines the special effects of a 3D Universal
-              Studios ride with a telekinetic escape room."
-            </p>
+          <div class="depoimentos">
+            <div class="depoimento">
+              <img src="imagens/img-dep1.webp" alt="" />
+              <p>
+                "Guests are immersed into an original "Stranger Things"
+                storyline...[it] combines the special effects of a 3D Universal
+                Studios ride with a telekinetic escape room."
+              </p>
+            </div>
+            <div class="depoimento">
+              <img src="imagens/img-dep2.webp" alt="" />
+              <p>
+                "Guests are immersed into an original "Stranger Things"
+                storyline...[it] combines the special effects of a 3D Universal
+                Studios ride with a telekinetic escape room."
+              </p>
+            </div>
+            <div class="depoimento">
+              <img src="imagens/img-dep3.webp" alt="" />
+              <p>
+                "Guests are immersed into an original "Stranger Things"
+                storyline...[it] combines the special effects of a 3D Universal
+                Studios ride with a telekinetic escape room."
+              </p>
+            </div>
           </div>
-          <div class="depoimento">
-            <img src="imagens/img-dep3.webp" alt="" />
-            <p>
-              "Guests are immersed into an original "Stranger Things"
-              storyline...[it] combines the special effects of a 3D Universal
-              Studios ride with a telekinetic escape room."
-            </p>
-          </div>
-        </div>
-      </section>
+        </section>
+      </div>
 
       <section class="secaoObrigado">
         <h2>OBRIGADO POR SE JUNTAR A NÓS NESTA AVENTURA EM:</h2>
@@ -123,22 +125,23 @@
               <li><img src="imagens/footer-twitter.svg" alt="" /></li>
             </ul>
           </div>
-        </div>
 
-        <div class="parceiro">
-          <h3>PARCEIRO DE MÍDIA</h3>
-          <img src="imagens/footer-parceiro.svg" alt="" />
-        </div>
+          <div class="parceiro">
+            <h3>PARCEIRO DE MÍDIA</h3>
+            <img src="imagens/footer-parceiro.svg" alt="" />
+          </div>
 
-        <div class="institucional">
-          <nav>
-            <ul>
-              <li>contato</li>
-              <li>Imprensa</li>
-              <li>Parcerias</li>
-              <li>Influenciadores</li>
-            </ul>
-          </nav>
+          <div class="institucional">
+            <h3>INSTITUCIONAL</h3>
+            <nav>
+              <ul>
+                <li>contato</li>
+                <li>Imprensa</li>
+                <li>Parcerias</li>
+                <li>Influenciadores</li>
+              </ul>
+            </nav>
+          </div>
         </div>
       </div>
       <div class="logotiposFooter">
